--- a/.github/workflows/Build-SukiSU-Ultra.yml
+++ b/.github/workflows/Build-SukiSU-Ultra.yml
@@ -210,13 +210,14 @@ jobs:
           fi
           
           cd ./common/
-          PATCH_FILE=50_add_susfs_in_gki-${{ inputs.ANDROID_VERSION }}-${{ inputs.KERNEL_VERSION }}.patch
-          if [[ -f "$PATCH_FILE" ]]; then
-            sed -i 's/-32,12 +32,38/-32,11 +32,37/g' "$PATCH_FILE"
-            sed -i '/#include <trace\/hooks\/fs.h>/d' "$PATCH_FILE"
-            patch -p1 < "$PATCH_FILE" || true
-          fi
+          #  PATCH_FILE=50_add_susfs_in_gki-${{ inputs.ANDROID_VERSION }}-${{ inputs.KERNEL_VERSION }}.patch
+          #  if [[ -f "$PATCH_FILE" ]]; then
+          #    sed -i 's/-32,12 +32,38/-32,11 +32,37/g' "$PATCH_FILE"
+          #    sed -i '/#include <trace\/hooks\/fs.h>/d' "$PATCH_FILE"
+          #    patch -p1 < "$PATCH_FILE" || true
+          #  fi
           # 应用susfs补丁
+          patch -p1 < 50_add_susfs_in_gki-${{ inputs.ANDROID_VERSION }}-${{ inputs.KERNEL_VERSION }}.patch || true
           patch -p1 -F 3 < syscall_hooks.patch || true
           patch -p1 -F 3 < 69_hide_stuff.patch
           patch -p1 -F 3 < ogki2gki_c99fix.patch
