--- a/.github/workflows/Build-SukiSU-Ultra.yml
+++ b/.github/workflows/Build-SukiSU-Ultra.yml
@@ -198,9 +198,13 @@ jobs:
           cp ../SukiSU_patch/69_hide_stuff.patch ./common/
           cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
           cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
-          # 添加oki补丁
-          cp ../ogki2gki.patch ./common/
-          cp ../ogki2gki_c99fix.patch ./common/
+          
+          
+          if [[ "${{ github.event.inputs.KERNEL_VERSION }}" == "6.6" ]]; then
+            # 添加oki补丁
+            cp ../ogki2gki.patch ./common/
+            cp ../ogki2gki_c99fix.patch ./common/
+          fi
           # 添加zram补丁
           if [[ "${{ github.event.inputs.ZRAM }}" == "true" ]]; then
             cp -r ../SukiSU_patch/other/zram/lz4k/include/linux/* ./common/include/linux
@@ -218,9 +222,13 @@ jobs:
           #  fi
           # 应用susfs补丁
           patch -p1 < 50_add_susfs_in_gki-${{ inputs.ANDROID_VERSION }}-${{ inputs.KERNEL_VERSION }}.patch || true
-          patch -p1 -F 3 < syscall_hooks.patch || true
           patch -p1 -F 3 < 69_hide_stuff.patch
-          patch -p1 -F 3 < ogki2gki_c99fix.patch
+          patch -p1 -F 3 < syscall_hooks.patch || true
+          
+          if [[ "${{ github.event.inputs.KERNEL_VERSION }}" == "6.6" ]]; then
+            patch -p1 -F 3 < ogki2gki_c99fix.patch
+          fi
+
           echo "✅ SUSFS 和 syscall_hooks patch 应用完成"
  
       - name: 应用zram相关补丁
